feat: implement get default rules api
