# blueprints/static/swagger.json
@@ -37,11 +37,11 @@
                   "example": [
                     "https://smu-bucket1.s3.ap-southeast-1.amazonaws.com/CreditEvauation/FinancialStatements/b8d37e2e"
                   ],
-                   "description": "S3 url(s) to financial document(s)"
+                  "description": "S3 url(s) to financial document(s)"
                 },
                 "rules_version": {
                   "type": "int",
-                  "example": "4",
+                  "example": 4,
                   "description": "(optional) rules version to use for credit rating formula"
                 }
               }
@@ -65,21 +65,125 @@
         }
       }
     },
+    "/credit-score-rules/fetch": {
+      "get": {
+        "summary": "Fetch Credit Score Rules",
+        "tags": ["Credit Score Rules"],
+        "description": "Fetch credit score rules based on the provided version or fetch the default if no version is specified.",
+        "parameters": [
+          {
+            "name": "rules_version",
+            "in": "query",
+            "required": false,
+            "description": "Version of the rules to fetch.",
+            "example": 8,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Rules retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "rules_file": { "type": "string" },
+                    "rules": { "type": "object" }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error retrieving rules"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/credit-score-rules/default-rules": {
+      "get": {
+        "summary": "Get Default Rules",
+        "description": "Get the default credit score rules.",
+        "tags": ["Credit Score Rules"],
+        "responses": {
+          "200": {
+            "description": "Default rules retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "rules_file": { "type": "string" },
+                    "rules": { "type": "object" }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error retrieving default rules"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
+    "/credit-score-rules": {
+      "get": {
+        "summary": "Get All Rules Versions",
+        "description": "Retrieve all versions of the credit score rules.",
+        "tags": ["Credit Score Rules"],
+        "responses": {
+          "200": {
+            "description": "All rules versions retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": {
+                    "type": "object"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Error retrieving rules versions"
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
+    },
     "/credit-score-rules/default-rules/update": {
       "post": {
         "summary": "Update Default Rules",
         "tags": ["Credit Score Rules"],
         "parameters": [
           {
-            "name": "rules_file",
+            "name": "rules_version",
             "in": "body",
             "required": true,
             "schema": {
               "type": "object",
               "properties": {
-                "rules_file": {
-                  "type": "string",
-                  "example": "rules20240915.json"
+                "rules_version": {
+                  "type": "int",
+                  "example": 7
                 }
               }
             }
@@ -97,15 +201,20 @@
                 },
                 "new_default_rules_file": {
                   "type": "string",
-                  "example": "rules20240915.json"
+                  "example": "rules_v7.json"
                 }
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
-     "/credit-score-rules/upload": {
+    "/credit-score-rules/upload": {
       "post": {
         "summary": "Upload Rules",
         "tags": ["Credit Score Rules"],
@@ -122,12 +231,19 @@
                   "additionalProperties": true,
                   "example": {
                     "scoring_weights": {
-                      "financial_ratios": {
-                        "current_ratio": {
-                          "weight": 0.3,
-                          "ideal_range": [1.5, 3],
-                          "penalty_factor": 0.1
-                        }
+                      "weights": {
+                        "liquidity_ratio": 1.5,
+                        "leverage_ratio": 1.8,
+                        "profitability_ratio": 2.0,
+                        "roe_ratio": 1.2,
+                        "debt_to_asset_ratio": -1.5,
+                        "ocf_to_liabilities_ratio": 1.5
+                      },
+                      "score_range": {
+                        "min_score": -10,
+                        "max_score": 10,
+                        "min_credit_score": 300,
+                        "max_credit_score": 850
                       }
                     }
                   }
@@ -158,7 +274,7 @@
                 },
                 "key": {
                   "type": "string",
-                  "example": "rules_v1.json"
+                  "example": "rules_v8.json"
                 }
               }
             }
@@ -187,7 +303,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
     "/source-data": {
@@ -310,3 +431,4 @@
     }
   }
 }
+
